tests/types/errors/legacy_class_keyword.mog
class Box {
  value i32
}
